# src/schemas/UserSchema.ts
@@ -4,5 +4,5 @@ export const UserSchema = Joi.object({
     email: Joi.string().required(),
     name: Joi.string().required(),
     password: Joi.string().required(),
-    phoneNumber: Joi.string().required(),
+    profilePhoto: Joi.string(),
 }).meta({ className: 'User' });
